--- a/trunk/nbproject/private/private.properties
+++ b/trunk/nbproject/private/private.properties
@@ -1,2 +1,1 @@
-jaxws.endorsed.dir=C:\\Program Files\\NetBeans 6.1\\java2\\modules\\ext\\jaxws21\\api
-user.properties.file=C:\\Documents and Settings\\Ron James\\.netbeans\\6.1\\build.properties
+user.properties.file=/Users/ronjames/.netbeans/6.1/build.properties
